<resources>
    <string name="app_name">Budget Buddy</string>
    <string name="user_id">user_id</string>
    <string name="user">user</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="_0_0">0.0</string>
    <string name="next">Next</string>
    <string name="salary">Salary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter_password">Enter New Password</string>

    <string name="re_enter_password">Re-enter Password</string>
    <string name="change">Change</string>
    <string name="change_password">Change Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="reminder">Reminder</string>
    <string name="enter_your_daily_expenses">Enter your daily expenses</string>
    <string name="groceries">Groceries</string>
    <string name="transportation">Transportation</string>
    <string name="investment">Investment</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="medical">Medical</string>
    <string name="add">Add</string>
    <string name="current_year">Current Year</string>
    <string name="previous_month">Previous Month</string>
    <string name="previous_year">Previous Year</string>
    <string name="pie_chart_for">Pie chart for</string>
    <string name="editor_insert_reminder_successful">Reminder saved</string>
    <string name="editor_insert_reminder_failed">Error with saving reminder</string>


    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>
    <string name="reminder_title">AlarmReminder</string>

    <string name="save">Save</string>

    <string name="set_reminder">Set reminder</string>
    <string name="date">Date</string>
    <string name="time">Select your time</string>
    <string name="user_details">user_details</string>

    <string-array name="questions">
        <item>What is your first pet\'s name?</item>
        <item>What is your born city?</item>
        <item>What is your first teacher name?</item>
        <item>What is your mother\'s middle name?</item>
        <item>What is your favourite sport?</item>
        <item>What is your nick name at home?</item>
    </string-array>
    <string-array name="arrMenu">actE
        <item>Home</item>
        <!--<item>Customer dashboard</item>-->
<!--        <item>Today\'s Sms</item>-->
        <item>Tally expense</item>
        <item>Add expense</item>
        <item>Savings Suggestions</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>

</resources>