<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusable="true"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    android:paddingBottom="150dp"
    android:layout_height="match_parent"
    tools:context=".fragments.FragChangePass">
    <TextView
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginEnd="15dp"
        android:text="@string/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_old_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_old_password" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/lyt_new_pass"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:orientation="vertical"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_verify_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_enter_password" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_change"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="end"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:text="@string/next"
        android:layout_height="wrap_content"/>
</LinearLayout>















