<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:clickable="true"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.FragAddExpenses"
    android:focusable="true">
    <ScrollView
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginStart="15dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:text="@string/enter_your_daily_expenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:weightSum="1">
                <TextView
                    android:id="@+id/txtGroceries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/groceries"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/edt_groceries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:drawableEnd="@drawable/ic_money_24"
                    android:hint="@string/_0_0"
                    android:inputType="number" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                android:weightSum="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="Food"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/edt_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:drawableEnd="@drawable/ic_money_24"
                    android:hint="@string/_0_0"
                    android:inputType="number" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                android:weightSum="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/transportation"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/edt_transport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:drawableEnd="@drawable/ic_money_24"
                    android:hint="@string/_0_0"
                    android:inputType="number" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                android:weightSum="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/investment"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/edt_investment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:drawableEnd="@drawable/ic_money_24"
                    android:hint="@string/_0_0"
                    android:inputType="number" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                android:weightSum="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/miscellaneous"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/edt_misc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:drawableEnd="@drawable/ic_money_24"
                    android:hint="@string/_0_0"
                    android:inputType="number" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                android:weightSum="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/medical"
                    android:textSize="18sp" />
                <EditText
                    android:id="@+id/edt_medical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:drawableEnd="@drawable/ic_money_24"
                    android:hint="@string/_0_0"
                    android:inputType="number" />
            </LinearLayout>
            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>